# qul-loader-navigation-poc

./: .gitignore  CLAUDE.md  LICENSE  README.md
QulLoaderNavigation/: .gitignore  CMakeLists.txt  ClosingScene.qml  ClosingView.qml  DebugOverlay.qml  HomeView.qml  KeyDispatcher.qml  Logger.qml  Main.qml  Mediator.qml  MenuView.qml  MiniKeyboardOverlay.qml  NavigationTable.qml  NormalScene.qml  OpeningScene.qml  OpeningView.qml  Sample1View.qml  Sample2View.qml  SceneBase.qml  TransitionManager.qml  ViewBase.qml  main.cpp
QulLoaderNavigation/Constants/: CMakeLists.txt  Direction.qml  Event.qml  Key.qml  Lifecycle.qml  NavDirection.qml  SceneId.qml  ScreenId.qml  ViewId.qml  ViewLifecycle.qml  VirtualEvent.qml  VirtualKey.qml
QulLoaderNavigation/Mediator/: CMakeLists.txt  KeyDispatcher.qml  Logger.qml  Mediator.qml  ScreenBase.qml  TransitionManager.qml  ViewBase.qml
QulLoaderNavigation/Scenes/: CMakeLists.txt
QulLoaderNavigation/Scenes/Base/: SceneBase.qml  ViewBase.qml
QulLoaderNavigation/Scenes/Closing/: ClosingScene.qml  ClosingView.qml
QulLoaderNavigation/Scenes/Normal/: HomeView.qml  MenuView.qml  NormalScene.qml  Sample1View.qml  Sample2View.qml
QulLoaderNavigation/Scenes/Opening/: OpeningScene.qml  OpeningView.qml
QulLoaderNavigation/Screens/: HelpRegistry.qml  ScreenRegistry.qml
QulLoaderNavigation/Screens/Closing/: ClosingScreen.qml  ClosingView.qml
QulLoaderNavigation/Screens/Normal/: HomeView.qml  MenuView.qml  NormalScreen.qml  Sample1View.qml  Sample2View.qml
QulLoaderNavigation/Screens/Opening/: OpeningScreen.qml  OpeningView.qml
docs/: design.md  flows.md  flows.pptx
docs/design/: 01-qul-loader-constraints.md  02-mediator-pattern.md  03-navigation-structure.md  04-screens-views.md  05-view-id-registry.md  06-mediator-api.md  07-transition-flow.md  08-key-dispatcher.md  10-opening-closing.md  11-verification.md  12-references.md  README.md
docs/design/09-lifecycle/: 01-essence.md  03-transition-manager.md  04-contract.md  05-08-scenarios-and-abort.md  09-screen-filtered-binding.md  10-base-components.md  11-onCompleted-vs-status.md  README.md
docs/flows/: start_app.bat  はじめに.txt
docs/flows/app/: actors.js  app.js  engine.js  groups.js  index.html  playback.js  scenarios.js  style.css
docs/flows/app/scenarios/: 01-startup.js  02-basic-key.js  03-nav.js  04-closing.js  05-sample2.js
docs/flows/docs/: README.md
docs/flows/scripts/: server.py  start_app.sh
